# aitestframework

./: .gitignore  CLAUDE.md  DIRECTORY.md  INSTALL.md  Jenkinsfile  README.md  build_golden.sh  ci.sh  environment.yml  install.sh  pyproject.toml
aidevtools/: __init__.py  cli.py
aidevtools/analysis/: profile.py
aidevtools/commands/: __init__.py
aidevtools/compare/: report.py  sanity.py
aidevtools/core/: __init__.py
aidevtools/formats/: _quantize_registry.py  _registry.py  quantize.py
aidevtools/formats/custom/: cpp_loader.py
aidevtools/formats/custom/bfp/cpp/: CMakeLists.txt  bfp.cpp  bfp.h
aidevtools/formats/custom/gfloat/cpp/: CMakeLists.txt  gfloat.h  gfloat_pybind.cpp
aidevtools/frontend/: compile.py
aidevtools/golden/: .gitignore
aidevtools/golden/cpp/: README.md  interface.h
aidevtools/ops/: auto.py
aidevtools/toolchain/: download.py
aidevtools/tools/compare/: diff.py  report.py
aidevtools/xlsx/: export.py  template.py
aitestframework/: __init__.py  cli.py
aitestframework/adt/: __init__.py
aitestframework/assertion/: __init__.py
aitestframework/core/: __init__.py  config.py  exception.py  logging.py
aitestframework/data/: __init__.py
aitestframework/extension/: __init__.py
aitestframework/integration/: __init__.py
aitestframework/model/: __init__.py
aitestframework/report/: __init__.py
aitf/: __init__.py  cli.py  config.py
aitf/comm/: __init__.py  db.py  models.py
aitf/ds/: __init__.py  cache.py  commands.py  integrity.py  manager.py  registry.py  routes.py  sftp.py  store.py  types.py
aitf/web/: __init__.py  app.py  tasks.py
aitf/web/api/: __init__.py  deps_routes.py  ds_routes.py
aitf/web/templates/: base.html  bundles.html  deps.html  index.html  log_view.html  logs.html
aitf/web/views/: __init__.py  deps.py  index.py  logs.py
backends/: __init__.py
backends/common/: __init__.py
backends/cpu/: __init__.py
backends/npu/: __init__.py
ci/: Jenkinsfile  Jenkinsfile.smoke  README.md
ci/deploy/: jenkins_deploy_linux.sh  jenkins_deploy_macos.sh  jenkins_deploy_windows.ps1  job_config_smoke.xml  job_config_stubs.xml
ci/deps_config/: example.yaml  latest.yaml
ci/scripts/: archive_artifacts.sh
demos/: .gitignore  README.md  __init__.py
demos/01_basic_ops/: README.md  run.py
demos/02_mini_transformer/: run.py
demos/03_transformer/: README.md  run.py
demos/04_xlsx_basic/: README.md  mlp_config.xlsx  run.py
demos/05_xlsx_transformer/: README.md  run.py  transformer_config.xlsx
demos/06_add_ops/: README.md
demos/07_transpose/: run.py
demos/08_paper_analysis/: main.py
doc/aidevtools/: architecture.md  compare_guide.md
doc/design/: 00-design-overview.md  01-logical-view.md  02-process-view.md  03-development-view.md  04-physical-view.md  05-scenarios.md
doc/req/: 00-requirements-index.yaml  01-core-framework.yaml  02-ai-model-testing.yaml  03-data-management.yaml  04-assertion-validation.yaml  05-report-generation.yaml  06-integration-deployment.yaml  07-extensibility.yaml  08-aidevtools-integration.yaml
docs/: README.md  coding_style.md  deploy.md
docs/design/: README.md  cic.md  dep.md  dvt.md  fwk.md  mdl.md  plt.md  qck.md  rst.md  sys.md  tmt.md
docs/req/: README.md  REQ-000-system.md  REQ-1-stubs.md  REQ-100-framework.md  REQ-2-golden.md  REQ-200-model.md  REQ-3-build.md  REQ-300-deps.md  REQ-4-cases.md  REQ-400-testmgmt.md  REQ-5-logparser.md  REQ-500-result.md  REQ-6-runner.md  REQ-600-cicd.md  REQ-7-web.md  REQ-700-platform.md  REQ-800-tools.md  REQ-900-quality.md  REQ-A00-efficiency.md  REQ-B00-devtool.md  REQ-NFR.md
libs/: __init__.py
libs/aidevtools/: __init__.py  cli.py  golden.py  torch_backend.py
libs/aidevtools/golden/cpp/: CMakeLists.txt  bfp_main.cpp  build.sh  main.cpp
libs/aidevtools/golden/cpp/bfp/: impl.cpp
libs/prettycli/: CHANGELOG.md  README.md  pyproject.toml
requirements/: base.txt  dev.txt  full.txt  torch.txt
scripts/: demo_deps.py  start.sh
scripts/ci/: ci.sh  quality_gate.sh  run_lint.sh  run_tests.sh
stubs/: CMakeLists.txt  README.md  build.sh
stubs/common/: CMakeLists.txt
stubs/common/include/: stub_config.h  stub_log.h  stub_registry.h
stubs/common/memmap/: stub_memmap.c  stub_memmap.h
stubs/common/result/: stub_result.c  stub_result.h
stubs/common/src/: stub_config.c  stub_main.c  stub_platform.c  stub_registry.c
stubs/common/weight/: stub_weight.c  stub_weight.h
stubs/hooks/func_sim/include/: msg_types.h  platform_api.h
stubs/hooks/func_sim/lib/: CMakeLists.txt
stubs/hooks/func_sim/src/: func_sim_main.c  platform_sim.c
stubs/models/: CMakeLists.txt  stub_model_table.c.in
stubs/models/demo_model_a/: CMakeLists.txt  demo_model_a_stub.c
stubs/models/demo_model_b/: CMakeLists.txt  demo_model_b_stub.c
stubs/models/fdd/: CMakeLists.txt  fdd_stub.c
stubs/models/fdd/weights/: manifest.txt
stubs/models/tdd/: CMakeLists.txt  tdd_stub.c
stubs/models/tdd/weights/: manifest.txt
stubs/tests/: CMakeLists.txt  func_sim_main.c  platform_sim.c  test_common.h  test_demo_model_a.c  test_demo_model_b.c  test_fdd.c  test_memmap.c  test_platform.c  test_registry.c  test_result.c  test_tdd.c  test_weight.c
stubs/tools/: embed_weights.py  pad_align.py  print_info.py  swap_endian.py
tests/: conftest.py  pytest.ini  test_build_sanity.py  test_config.py  test_stub_runner.py  test_ut_pass.py
tests/ds/: conftest.py  test_cache.py  test_integrity.py  test_manager.py  test_registry.py  test_sftp.py  test_types.py
tests/it/: test_export.py
tests/matrix/: compare_matrix.md  trace_matrix.md
tests/st/: test_compare_cmd.py
tests/ut/: __init__.py  conftest.py  test_analysis.py  test_cli.py  test_compare.py  test_compare_mode.py  test_cpu_golden.py  test_framework_init.py  test_frontend.py  test_fuzzy.py  test_golden.py  test_isclose.py  test_ops.py  test_ops_coverage.py  test_quantize.py  test_registry.py  test_torch_backend.py  test_traced_tensor.py  test_transpose.py  test_utils.py  test_xlsx.py
tests/ut/trace/: __init__.py  (+1 more)
tests/web/: conftest.py  test_datastore_routes.py  test_deps_routes.py  test_golden_routes.py
(+155 files in other folders)
