[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aitestframework"
version = "0.1.0"
description = "AI模型测试框架，集成aidevtools算子验证工具"
requires-python = ">=3.9,<3.13"

# 核心依赖（最小安装）
dependencies = [
    "numpy>=1.21,<2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# 开发依赖
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "pylint>=3.0.0",
]

# PyTorch后端（算子Golden生成需要）
torch = [
    "torch>=2.0.0",
]

# Excel工作流
xlsx = [
    "openpyxl>=3.0.0",
]

# C++ Golden编译
cpp = [
    "pybind11>=2.10.0",
    "cmake>=3.20.0",
]

# 工具链下载
toolchain = [
    "httpx>=0.24.0",
]

# 报告生成
report = [
    "jinja2>=3.0",
    "matplotlib>=3.5.0",
]

# 完整安装（所有可选功能）
all = [
    "aitestframework[torch,xlsx,cpp,toolchain,report]",
]

# libs中各库的依赖汇总
aidevtools = [
    "aitestframework[torch,xlsx,cpp]",
]

[project.scripts]
aitest = "aitestframework.cli:main"
aidev = "aidevtools.cli:main"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["aitestframework", "libs/aidevtools", "backends"]

[tool.hatch.build.targets.wheel.sources]
"libs/aidevtools" = "aidevtools"

[tool.pylint.messages_control]
disable = [
    "import-outside-toplevel",    # 允许延迟导入（可选依赖）
    "abstract-method",            # 允许部分实现的抽象类
    "too-many-arguments",         # AI模型常有多个参数
    "too-many-instance-attributes",  # 配置类属性多
    "too-many-locals",            # 复杂算子实现
    "too-many-branches",          # 条件分支多
    "duplicate-code",             # 算子实现存在相似代码
    "fixme",                      # 允许 TODO/FIXME 注释
    "logging-fstring-interpolation",  # 允许 f-string 日志
]

[tool.pylint.basic]
good-names = ["i", "j", "k", "n", "m", "x", "y", "z", "M", "K", "N", "H", "W", "C", "B", "T", "S", "Q", "V", "L", "kH", "kW", "_", "__version__"]
const-rgx = "(_?[A-Z][A-Z0-9_]*|_?[a-z][a-z0-9_]*)$"
function-rgx = "[a-z_][a-z0-9_]{0,50}$"
variable-rgx = "([a-z_][a-z0-9_]{0,50}|[A-Z][A-Z0-9]?(_[a-z]+)?)$"
class-rgx = "([A-Z_][a-zA-Z0-9]*|[a-z_][a-z0-9_]*)$"

[tool.pylint.design]
max-args = 7
max-positional-arguments = 7
max-locals = 20
max-attributes = 12

[tool.ruff]
line-length = 100
target-version = "py39"

# 启用的规则组
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "A",      # flake8-builtins
    "C4",     # flake8-comprehensions
    "RUF",    # ruff-specific
]

# 忽略的规则
ignore = [
    "E501",   # 行长度由 line-length 控制
    "E731",   # 允许 lambda 赋值（AI代码常用）
    "N803",   # 允许大写参数名（如 N, M, K 等张量维度）
    "N806",   # 允许大写变量名（如 H, W, C 等）
    "B008",   # 允许函数调用作为默认参数
    "B905",   # 允许 zip 不带 strict
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401", "F403"]  # 允许 import 但未使用
"**/tests/*" = ["F401", "F811", "B011"]  # 测试文件放宽规则
"**/conftest.py" = ["F401", "F811"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
